<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".Activity.NewsSourcesActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:visibility="visible" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginBottom="@dimen/normal_text_size">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/primary_text_size">


            <TextView
                android:id="@+id/sources_text_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/primary_text_size"
                android:layout_marginTop="@dimen/primary_text_size"
                android:text="@string/top_sources"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/primary_text_size" />

            <LinearLayout
                android:id="@+id/top_layout"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_below="@+id/sources_text_label"
                android:gravity="center"
                android:paddingTop="@dimen/normal_text_size"
                android:weightSum="1">


                <android.support.v7.widget.CardView
                    android:id="@+id/bbc_news"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/primary_text_size"
                    android:layout_weight="0.5"
                    android:elevation="@dimen/tiny_text_size"
                    app:cardCornerRadius="@dimen/tiny_text_size">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/bbc_img"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/tiny_text_size"
                            android:gravity="center"
                            android:padding="@dimen/primary_text_size"
                            android:src="@drawable/bbc" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/bbc_img"
                            android:layout_centerHorizontal="true"
                            android:text="@string/bbc_news" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cbc_news"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/primary_text_size"
                    android:layout_marginRight="@dimen/primary_text_size"
                    android:layout_weight="0.5"
                    android:elevation="@dimen/tiny_text_size"
                    app:cardCornerRadius="@dimen/tiny_text_size">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/cbc_img"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/tiny_text_size"
                            android:gravity="center"
                            android:padding="@dimen/primary_text_size"
                            android:src="@drawable/cbc" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/cbc_img"
                            android:layout_centerHorizontal="true"
                            android:text="@string/cbc_news" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/middle_layout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@+id/top_layout"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="@dimen/primary_text_size"
                android:weightSum="1">


                <android.support.v7.widget.CardView
                    android:id="@+id/bloomberg_news"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/primary_text_size"
                    android:layout_weight="0.5"
                    android:elevation="@dimen/tiny_text_size"
                    app:cardCornerRadius="@dimen/tiny_text_size">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/bloomberg_img"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/tiny_text_size"
                            android:gravity="center"
                            android:padding="@dimen/primary_text_size"
                            android:src="@drawable/bloomberg" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/bloomberg_img"
                            android:layout_centerHorizontal="true"
                            android:text="@string/bloomberg" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/the_hindu_news"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/primary_text_size"
                    android:layout_marginRight="@dimen/primary_text_size"
                    android:layout_weight="0.5"
                    android:elevation="@dimen/tiny_text_size"
                    app:cardCornerRadius="@dimen/tiny_text_size">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/thehindu_img"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/tiny_text_size"
                            android:gravity="center"
                            android:padding="@dimen/primary_text_size"
                            android:src="@drawable/the_hindu" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/thehindu_img"
                            android:layout_centerHorizontal="true"
                            android:text="@string/the_hindu" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>


            </LinearLayout>

            <TextView
                android:id="@+id/category_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/middle_layout"
                android:layout_marginLeft="@dimen/primary_text_size"
                android:layout_marginTop="@dimen/normal_text_size"
                android:text="@string/category_news"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/primary_text_size" />

            <LinearLayout
                android:id="@+id/category_top_layout"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_below="@+id/category_label"
                android:layout_marginTop="@dimen/normal_text_size"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">


                <android.support.v7.widget.CardView
                    android:id="@+id/general_news"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/primary_text_size"
                    android:layout_weight="0.5"
                    android:elevation="@dimen/tiny_text_size"
                    app:cardCornerRadius="@dimen/tiny_text_size">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/img"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/tiny_text_size"
                            android:gravity="center"
                            android:padding="@dimen/primary_text_size"
                            android:src="@drawable/ic_trend_news" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/img"
                            android:layout_centerHorizontal="true"

                            android:text="@string/trending_news" />
                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/tech_news"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/primary_text_size"
                    android:layout_marginRight="@dimen/primary_text_size"
                    android:layout_weight="0.5"
                    android:elevation="@dimen/tiny_text_size"
                    app:cardCornerRadius="@dimen/tiny_text_size">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/tech_img"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/tiny_text_size"
                            android:gravity="center"
                            android:padding="@dimen/primary_text_size"
                            android:src="@drawable/ic_tech" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tech_img"
                            android:layout_centerHorizontal="true"
                            android:text="@string/technology" />
                    </RelativeLayout>

                </android.support.v7.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/category_bottom_layout"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_below="@+id/category_top_layout"
                android:layout_marginTop="@dimen/primary_text_size"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">


                <android.support.v7.widget.CardView
                    android:id="@+id/entertainmentNews"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/primary_text_size"
                    android:layout_weight="0.5"
                    android:elevation="@dimen/tiny_text_size"
                    app:cardCornerRadius="@dimen/tiny_text_size">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/entertain_img"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/tiny_text_size"
                            android:gravity="center"
                            android:padding="@dimen/primary_text_size"
                            android:src="@drawable/ic_entertain" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/entertain_img"
                            android:layout_centerHorizontal="true"
                            android:text="@string/entertainment" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/healthNews"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/primary_text_size"
                    android:layout_marginRight="@dimen/primary_text_size"
                    android:layout_weight="0.5"
                    android:elevation="@dimen/tiny_text_size"
                    app:cardCornerRadius="@dimen/tiny_text_size">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/health_img"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/tiny_text_size"
                            android:gravity="center"
                            android:padding="@dimen/primary_text_size"
                            android:src="@drawable/ic_health" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/health_img"
                            android:layout_centerHorizontal="true"
                            android:text="@string/health" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>


            </LinearLayout>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>